# covenant

./: CLAUDE.md  MAGIC-ROUTES.md  README.md  octagonal-buttons.html  package-lock.json  package.json  parallelogram-buttons.html
data/contracts/: 07a410d9-6b3d-4e3b-942d-127d3525c4d1.json  0cd2a403-7cb8-4b0e-8639-b4325758a64b.json  13b6067a-dce4-4c85-ae39-bafb4e3e5f04.json  1576df40-708c-4f49-b408-e1c31bfc2e9d.json  19cfe6eb-9b09-4380-9dff-e8ea577e4b52.json  1caebafd-6bf9-45d7-9ee1-f84cae8b166b.json  2c81d25c-9f82-49f1-b3b8-63d28dce892e.json  36067277-70f6-4df3-bdfa-0b483283828f.json  3adbaa1f-9f2f-4b9c-b0c2-45cbcc22be14.json  440d38b5-2908-4691-bc6f-b4314cc8108e.json  58f1b596-0eed-4554-b99b-59fb788284db.json  69c7eff3-b54b-4e93-ba90-c65c16ba16c1.json  72e20424-acc2-4541-852b-289755b6a679.json  7511aff7-3abd-4705-81b6-69b669300292.json  76267c14-fd4a-4560-9144-5e4779c5b19a.json  7945fa58-5f35-4107-8c2f-c63377b60626.json  bed8fee9-2134-40bd-907d-13f2926a4ccc.json  bf13f0d0-d2cc-47fd-b62f-f162868968a2.json  d11fe5c1-1b7d-4f0b-a8a3-5c501a49851f.json  d4279d3e-b38d-4450-8966-9186d8f4c374.json  e1a9dd4d-8f47-452f-be74-15ff792234a1.json  e4c5aa85-d5c2-4d99-a340-f744bc16d38b.json
data/keys/: covenant-server.json
demo/: extension-integration.html  index.html  live-extension-test.html  package-lock.json  package.json  pubkey-authorization-test.html  public-signing-test.html  server.js  sign-test-step.js  simple-demo.html
public/: signCovenant.js
src/client/rust/covenant-rs/: Cargo.toml
src/client/rust/covenant-rs/src/: lib.rs
test/mocha/: client-sdk.test.js  (+2 more)
(+5 files in other folders)
