[package]
name = "covenant-rs"
version = "0.0.1"
edition = "2021"
description = "Rust client SDK for Covenant magical contract service"
license = "MIT"
authors = ["Planet Nine"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sessionless = { path = "../../../../sessionless/rust/sessionless-rs" }

[dev-dependencies]
tokio-test = "0.4"